// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-bdVaJa sc-bwzfXH eKJsVq"
    role="button"
    type="button"
    value="Primary"
  />
</div>
`;

exports[`Button Secondary Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-bdVaJa sc-htpNat hYobde"
    role="button"
    type="button"
    value="Secondary"
  />
</div>
`;
